I3: number guessing game complete

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head></head>
-  <body>
-    <p>
-      The SECRET NUMBER is <%= number %>
-    </p>
-  </body>
-</html>
+  <html>
+    <head></head>
+    <body>
+      </p>
+      <%= message %>
+      <p>
+    </body>
+    <form>
+      <input type="text" name="guess"/>
+      <input type="submit" value="Guess!"/>
+    </form>
+  </html>
