add background color

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
   <html>
-    <head></head>
+    <head>
+      <style>
+        body {
+         background: <%= color %>
+       }
+      </style>
+    </head>
     <body>
       </p>
       <%= message %>
       <p>
+      <form>
+        <input type="text" name="guess"/>
+        <input type="submit" value="Guess!"/>
+      </form>
     </body>
-    <form>
-      <input type="text" name="guess"/>
-      <input type="submit" value="Guess!"/>
-    </form>
   </html>
